--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "socket.io-client": "^4.7.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
