--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@golevelup/ts-jest": "^0.4.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -54,6 +55,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "mongodb-memory-server": "^9.1.4",
     "prettier": "^3.0.0",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.3",
