--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
 		"start": "next start",
 		"lint": "next lint",
 		"test": "jest",
-		"test:watch": "jest --watch"
+		"test:watch": "jest --watch",
+		"test:cov": "jest --coverage"
 	},
 	"dependencies": {
 		"axios": "^1.6.5",
